<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/>
    </parent>

    <groupId>fr.uga.miage.m1</groupId>
    <artifactId>pc-strawhats</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>pc-strawhats</name>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>rest-api</module>
        <module>api-client</module>
        <module>server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <kotlin.version>2.0.21</kotlin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <sonar.host.url>https://im2ag-sonar.univ-grenoble-alpes.fr</sonar.host.url>
        <sonar.qualitygate.wait>false</sonar.qualitygate.wait>
        <ut.pattern>**/*Test.*</ut.pattern>
        <it.pattern>**/*IT.*</it.pattern>
        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
        <surefire.version>3.5.4</surefire.version>
        <failsafe.version>3.5.4</failsafe.version>
        <jacoco.version>0.8.12</jacoco.version>
        <flyway-maven.version>9.22.2</flyway-maven.version>
        <springdoc.version>2.7.0</springdoc.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <configuration>
                        <jvmTarget>${java.version}</jvmTarget>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                        </args>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <goals><goal>compile</goal></goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <goals><goal>test-compile</goal></goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <includes>
                            <include>${ut.pattern}</include>
                        </includes>
                        <argLine>${argLine} -XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${failsafe.version}</version>
                    <executions>
                        <execution>
                            <id>integration-tests</id>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <includes>
                                    <include>${it.pattern}</include>
                                </includes>
                                <useModulePath>false</useModulePath>
                                <argLine>${argLine} -XX:+EnableDynamicAgentLoading</argLine>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <version>${flyway-maven.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <mainClass>fr.uga.miage.m1.PcProjectApplicationKt</mainClass>
                        <skip>false</skip>
                        <includeSystemScope>true</includeSystemScope>
                        <layout>JAR</layout>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
